# tharavu

./: API.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Makefile  NOTICE  README.md  SECURITY.md  USAGE.md
include/: data_engine.h  tharavu_dll.h
pr0000109/: API.md  LICENSE  USAGE.md  tharavu.ini
pr0000109/.claude/: settings.json
pr0000109/include/: formats.h  tharavu_dll.h  tharavu_types.h
pr0000109/sample/: tharavu.ini
pr0000109/sample/data/demo/: users.odat  vocab.ovoc
pr0000109/sample/sample/data/demo/: users.odat
pr0000109/src/: platform.c  tharavu_dll.c
pr0000109/tools/: de_crud.c
sample/: README.md  create_sample_db.c
sample/data/demo/: embeddings.ovec
sample/sample/data/demo/: embeddings.ovec  vocab.ovoc
src/: data_engine.c  platform.c  tharavu_dll.c
tools/: de_crud.c  de_dump.c  de_import.c
